--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ greenlet = "^3.1.1"
 asyncpg = "^0.30.0"
 mypy = "^1.13.0"
 alembic = "^1.14.0"
+aiogram-i18n = "^1.4"
 
 [tool.poetry.group.redis]
 optional = true
