--- a/.env.example
+++ b/.env.example
@@ -10,6 +10,7 @@ APP_PREFIX_environment=dev
 APP_PREFIX_logging_dir=
 APP_PREFIX_logging_info_filename=
 APP_PREFIX_logging_level=10
+APP_PREFIX_supported_locales=en,ru
 APP_PREFIX_throttling_rate_limit=0.5
 APP_PREFIX_token=
 
